iac/kustomize/plex/base/referencegrant-gateway-tls.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: allow-kgateway-tls-plex
  namespace: default
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: kgateway-system
  to:
    - group: ""
      kind: Secret
      name: plex-certificate
