iac/kustomize/plex/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: plex-media-server
    app.kubernetes.io/instance: plex
    app.kubernetes.io/name: plex-media-server
    app.kubernetes.io/version: 1.42.2
  name: plex-plex-media-server
spec:
  ports:
  - name: pms
    port: 32400
    protocol: TCP
    targetPort: 32400
  selector:
    app.kubernetes.io/instance: plex
    app.kubernetes.io/name: plex-media-server
  type: ClusterIP
