iac/kustomize/plex/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: plex.home.bradandmarsha.com
    external-dns.alpha.kubernetes.io/target: home.bradandmarsha.com
  labels:
    app: plex-media-server
    app.kubernetes.io/instance: plex
    app.kubernetes.io/name: plex-media-server
    app.kubernetes.io/version: 1.42.2
    name: plex-media-server-ingress
  name: plex-media-server-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - plex.home.bradandmarsha.com
      secretName: plex-certificate
  rules:
    - host: plex.home.bradandmarsha.com
      http:
        paths:
        - backend:
            service:
              name: plex-plex-media-server
              port:
                number: 32400
          path: /
          pathType: Prefix
